--- a/css/media.css
+++ b/css/media.css
@@ -62,6 +62,12 @@
 	.secondContentBlock .forthSection{
 		margin-top: 300px;
 	}
+	.secondContentBlock .supportUkraineBlock .imgBlock{
+		height: 70%;
+	}
+	.secondContentBlock .supportUkraineBlock .textBlock{
+		height: 70%;
+	}
 	
 }
 
@@ -85,6 +91,8 @@
 
 	.secondContentBlock .forthSection .imgBlock{
 		width: 45%;
+		align-items: center;
+		display: flex;
 	}
 	.secondContentBlock .forthSection .textsBlock{
 		width: 55%;
@@ -193,7 +201,15 @@
 		width: 100%;
 		border-radius:0 0 7px 7px;
 	}
-
+	.secondContentBlock .fivethSection .titleBlock h2{
+		font-size: 40px;
+	}
+	.secondContentBlock .fivethSection .sliderContainer .first .topBlock .top{
+		font-size: 20px;
+	}
+	.secondContentBlock .fivethSection .sliderContainer .first .bottomBlock .rightBlock .top, .secondContentBlock .fivethSection .sliderContainer .first .bottomBlock .leftBlock .top{
+		font-size: 20px;
+	}
 
 
 }
@@ -224,13 +240,13 @@
 		display: none;
 	}
 	.secondContentBlock .firstSection .textsBlock{
-		width: 80%;
+		width: 90%;
 		height: 70%;
 		border-radius:0 0 7px 7px;
 		overflow: hidden;
 	}
 	.secondContentBlock .firstSection .imgBlock{
-		width: 80%;
+		width: 90%;
 		height: 400px;
 		overflow: hidden;
 
@@ -307,6 +323,42 @@
 		font-size: 45px;
 	}
 
+		/* ***** */
+
+		.secondContentBlock .fivethSection .sliderBlocks .block{
+			width: 87vw;
+		}
+
+
+		/* ***** */
+
+
+		.secondContentBlock .supportUkraineBlock .imgBlock {
+			height: 40%;
+			width: 10%;
+		}
+		.secondContentBlock .supportUkraineBlock .textBlock {
+			height: 70%;
+			width: 65%;
+		}
+
+		/* ***** */
+
+		.secondContentBlock .rebrandSkillsBlock{
+			flex-direction: column;
+		}
+		.secondContentBlock .rebrandSkillsBlock .filters{
+			width: 100%;
+		}
+		.secondContentBlock .rebrandSkillsBlock .rightSide{
+			width: 100%;
+			justify-content: flex-start;
+		}
+		.secondContentBlock .rebrandSkillsBlock .rightSide .list{
+			width: auto;
+			padding: 0 5px;
+		}
+
 }
 @media screen and (max-width:480px) {
 	/* ***** */
@@ -349,4 +401,13 @@
 	.secondContentBlock .firstSection .textsBlock h1{
 		font-size: 35px;
 	}
+
+			/* ***** */
+			.secondContentBlock .footer .minisizeTop{
+				margin: 0;
+			}
+			.secondContentBlock .footer .social img{
+				width: 30px;
+				height: 30px;
+			}
 }
